# magic_tree_fitter

./: README.md  dump.txt  dune-project  utop.txt
design/: magic_tree_fitter_design.excalidraw
grammars/: lisp.g4  min_epsilon_grammar.g4  min_grammar.g4  two_star_grammar.g4
lib/: core_algo.ml  domain_types.ml  dump.ml  dune  glr_algo_data_structures.ml  grammar_reader.ml  grammar_reader_utils.ml  parse_table_constructor.ml
lib/core/: core_algo.ml  get_all_actions.ml  glr_utils.ml  graph.ml  graph_monad_ops.ml  gss.ml  gss_actions.ml  gss_debug.ml  gss_parser.ml  gss_stack.ml  sppf.ml  stack.ml  stack_monad_ops.ml  stack_ops.ml
test/: dune  test_core_algo.ml  test_grammar_reader.ml  test_magic_tree_fitter.ml  test_parse_table_construction.ml  test_utils.ml
