(include_subdirs unqualified)

(library
 (name magic_tree_fitter)
 (libraries str unix yojson)
 ; (modules core_algo domain_types grammar_reader symbol_table parse_table_constructor grammar_reader_utils dump gss sppf)
 (flags (:standard -w -26-27-32)) )


; (env
;  (dev
;   (flags (:standard -w -32))))
;
